tests/testcases/errors/BCE0112-1.boo
"""
BCE0112-1.boo(5,9): BCE0112: Destructors cannot be passed parameters
"""
class Burninator:
	def destructor (burnText as string):
		print "${burnText}!"
